@startuml
'https://plantuml.com/class-diagram

abstract class Shape {
    {static} int NUMBER_OF_ANGELS
    {static} int count;
	- int x
	- int y
	+ Shape()
	+ Shape(int x, int y)
	+ Shape(Shape s)
	+ void setX(int x)
    + void setY(int y)
    + void setPosition(int x, int y)
    + int getX()
    + int getY()
    + {abstract} void grow(int d)
    + {abstract} int area()
    + {abstract} int perimeter()
    {static} int getCount()
}

class Rectangle {
    {static} int NUMBER_OF_ANGELS
    {static} int count;
	- int width
	- int height
	+ Rectangle()
	+ Rectangle(int width, int height)
	+ Rectangle(int x, int y, int width, int height)
	+ Rectangle(Rectangle r)
    + void setWidth(int width)
    + void setHeight(int height)
    + void grow(int d)
    + int getWidth()
    + int getHeight()
    + int area()
    + int perimeter()
    {static} int getCount()
}

Shape <|-- Rectangle
Shape <|-- Circle
Rectangle <|-- Square

class Square {
    {static} int count;
	+ Square()
	+ Square(int width, int height)
	+ Square(int x, int y, int width, int height)
	+ Square(Square s)
    + void setWidth(int width)
    + void setHeight(int height)
    {static} int getCount()
}

class Circle {
    {static} int NUMBER_OF_ANGELS
    {static} int count;
	- int radius
	+ Circle()
	+ Circle(int radius)
	+ Circle(int x, int y, int radius)
	+ Circle(Circle c)
    + void setRadius(int radius)
    + void grow(int d)
    + int getRadius()
    + int area()
    + int perimeter()
    {static} int getCount()
}


@enduml